# sjtu-gimbal

./: Dockerfile  README.md  _run.sh  build.sh  controller_debug.sh  dockerbuild.sh  dockerrun.sh  entrypoint.sh  frames_2024-01-05_20.20.34.gv  frames_2024-12-19_13.08.46.gv  multi_drone.sh  run.sh  run_gimbal.sh  run_gimbal_only.sh  single_drone.sh  xacro_gen.sh
sjtu_drone_bringup/launch/: sjtu_drone_bringup_empty_world.launch.py  sjtu_drone_empty_world.launch.py
sjtu_drone_description/urdf/: sjtu_drone_multi.urdf.xacro
src/gimbal_control/: CMakeLists.txt  package.xml
src/gimbal_control/src/: camera_cv_node copy.cpp  camera_cv_node.cpp  gimbal_controller_node.cpp  gimbal_controller_node_original.cpp  gimbal_state_node.cpp
src/gimbal_control/src/programs/: constants.h  cv_image_process.cpp  cv_image_process.h
src/gimbal_standalone/: CMakeLists.txt  README.md  package.xml
src/gimbal_standalone/config/: controller_position.yaml
src/gimbal_standalone/description/: gimbal_camera_.xacro  gimbal_camera_description.xacro  gimbal_camera_gazebo_control.xacro
src/gimbal_standalone/launch/: control.launch.py  control_vel.launch.py  launch_sim.launch.py  rsp.launch.py  rviz.launch.py  velcon.launch.py
src/gimbal_standalone/src/: control.py  velcon.py
src/sjtu_drone_bringup/: setup.py
src/sjtu_drone_bringup/launch/: control.launch.py  launch_sim.launch.py  rsp.launch.py  sjtu_drone_1x_empty_world.launch.py  sjtu_drone_2x_bringup_empty_world.launch.py  (+3 more)
src/sjtu_drone_control/: setup.py
src/sjtu_drone_description/: CMakeLists.txt  README.md
(+34 files in other folders)
